<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmenTab54.tab_home54"
    android:background="@color/colorWhite">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/tipe_54" />

        </FrameLayout>

        <TextView
            style="@style/TextContent.BLack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:text="@string/_73554"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorBlack"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_hanya_5_buah"
            android:textSize="12sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <TextView
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_text54"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"
            android:textColor="@color/colorBlack"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spesifikasi"
            android:textSize="12sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/display"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/content_specs_display54"
                    android:textColor="@color/colorBlack"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/size"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/content_specs_size54"
                    android:textColor="@color/colorBlack"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/battery"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/content_specs_battery54"
                    android:textColor="@color/colorBlack"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>

</ScrollView>